1.7-1 (NOT YET RELEASED)
  * Fixed logicals bug (number 1911)

1.7-0
  * Added some vectorization code to improve performance.
  * Let "caption" be length 2, in which case the second value is 
    the short caption used when creating a list of tables.
  * Added "toLatex" method.
  * Included "print.xtable" in the exported methods in the NAMESPACE file.
  * Added "print.results" argument to "print" that can be used to
    suppress the printing.
  * Added "format.args" argument to "print" that can be used to
    pass additional arguments such as "big.marks" to "formatC()".
  * Added "rotate.colnames" and "rotate.rownames" arguments to
    "print.xtable".  
  * Added "booktabs" argument to use the "\toprule", "\midrule", and  
    "\bottomrule" tags from the Latex "booktabs" package rather than
	using "\hline" for all horizontal lines.
  * Added "scalebox" argument to include a "\scalebox" clause around
    the tabular environment with the specified value used as the
    scaling factor.	
  * Added "width" argument to allow specification of the width
    value in tabular environments such as "tabularx".
  * Added "X" as an allowed alignment value in the "align()"
    replacement function.  
  * Changed the "print.xtable()" arguments to use "getOption()"
    to check the options for a default value.  This was suggested
	since "print.xtable()" has a lot of arguments that the user
	will typically leave unchanged between tables.
  * Added an "is.null()" check on the "table.placement" argument.
  * Added examples using the new arguments to the vignette.
	
1.6-0 (2011-10-07)
  * Allow "table*" as a value for "floating.environment" in print.xtable().
  * Fix bug under which multiple logical columns were formatted incorrectly.
  * Stop with an error if "xtable.table" is used on a table with more than
    two dimensions.
  * Add some newlines to "Rd" file to prevent lines from extending off the
    page in the PDF version of the help files.